@@ -25,7 +25,6 @@
   <properties>
     <version.java>8</version.java>
     <license.header.file>com/mycila/maven/plugin/license/templates/APACHE-2.txt</license.header.file>
-    <protocol.version>7</protocol.version>
   </properties>
 
   <dependencies>
@@ -33,7 +32,6 @@
       <groupId>io.camunda</groupId>
       <artifactId>camunda-security-protocol</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.agrona</groupId>
       <artifactId>agrona</artifactId>
@@ -106,22 +104,20 @@
   <build>
     <resources>
       <resource>
-        <filtering>true</filtering>
-        <directory>src/main/resources</directory>
+        <directory>${project.basedir}/src/main/resources</directory>
+      </resource>
+      <resource>
+        <directory>${project.build.directory}/generated-sources</directory>
+        <includes>
+          <include>**/*.sbeir</include>
+          <include>**/*.xml</include>
+        </includes>
       </resource>
     </resources>
-
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <compilerArgs combine.children="append">
-            <!-- required by javac detection logic in immutables -->
-            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-          </compilerArgs>
-          <fork>true</fork>
-        </configuration>
         <executions>
           <execution>
             <id>default-compile</id>
@@ -140,20 +136,6 @@
           </execution>
         </executions>
 
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-resources-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>default-resources</id>
-            <goals>
-              <goal>resources</goal>
-            </goals>
-            <phase>generate-sources</phase>
-          </execution>
-        </executions>
       </plugin>
 
       <plugin>
@@ -184,8 +166,8 @@
             <phase>generate-sources</phase>
             <configuration>
               <arguments>
-                <argument>${project.build.outputDirectory}/protocol.xml</argument>
-                <argument>${project.build.outputDirectory}/cluster-management-protocol.xml</argument>
+                <argument>${project.build.resources[0].directory}/protocol.xml</argument>
+                <argument>${project.build.resources[0].directory}/cluster-management-protocol.xml</argument>
               </arguments>
             </configuration>
           </execution>
